# folder_diff_sync

./: .gitignore  .metadata  README.md  analysis_output_2.txt  current_errors.txt  errors.txt  flutter_run_logs.txt  pubspec.yaml
android/app/: build.gradle.kts
installer/: folder_diff_sync.iss  test.iss
installer/data/flutter_assets/: FontManifest.json  NOTICES.Z
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: env_sync_item.dart  sync_item.dart
lib/providers/: env_sync_provider.dart  sync_provider.dart
lib/services/: comparison_service.dart  env_sync_service.dart  native_file_transfer.dart  sync_service.dart  tray_service.dart
lib/utils/: item_counter.dart
lib/widgets/: custom_title_bar.dart  diff_list.dart  env_sync_view.dart  folder_selector.dart  glass_card.dart  primary_button.dart  sync_tree_view.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
native/: build_rust.cmd  build_rust.sh
native/file_transfer_rs/: Cargo.toml
native/file_transfer_rs/src/: lib.rs
test/: benchmark_copy.dart  benchmark_copy_simple.dart  sync_state_test.dart  widget_test.dart
test_data/folder_a/: file_3_0.txt  file_3_1.txt  file_3_3.txt  only_in_a.txt
test_data/folder_a/dir_3_0/: file_2_0.txt  file_2_3.txt
test_data/folder_a/dir_3_1/: file_2_1.txt  file_2_3.txt
test_data/folder_b/: file_3_2.txt  file_3_4.txt  only_in_b.txt
test_data/folder_b/dir_3_0/: file_2_1.txt  file_2_2.txt  file_2_4.txt
test_data/folder_b/dir_3_1/: file_2_0.txt  (+2 more)
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
